--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "gh-pages": "^2.0.1",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2"
@@ -7,10 +8,12 @@
   "devDependencies": {
     "react-scripts": "1.1.4"
   },
+  "homepage": "https://github.com/Yulya-Yu/reactnd-project-myreads-starter",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d public"
   }
 }
