--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-router-dom": "^4.3.1"
+    "react-router-dom": "^4.3.1",
+    "remove-node-modules": "^1.7.4",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
@@ -15,6 +17,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   }
 }
