--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-dom": "^16.3.2",
     "react-router-dom": "^4.3.1",
     "remove-node-modules": "^1.7.4",
+    "react-scripts": "1.1.4",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
@@ -17,6 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   }
 }
